--- a/style.css
+++ b/style.css
@@ -38,15 +38,20 @@ body {
   
   .album-cover {
     height: 100%;
-    margin-right: 10px;
+    margin-right: 7px;
     aspect-ratio: 1 / 1;
   }
 
   .song {
     height: 100px;
     width: 100%;
-    display: inline;
+    display: flex;
     animation: fadein 100ms;
+  }
+
+  .song.title {
+    font-size: 20px;
+    font-weight: bolder;
   }
 
   @keyframes fadein {
