--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   .percentage {
     position: relative;
     font-size: var(--font-size);
-    color: rgb(0, 0, 0, 0.8);
+    color: white;
   }
   
   .album-cover {
@@ -50,7 +50,7 @@ body {
     width: 100%;
     align-items: center;
     display: flex;
-    animation: fadein 100ms;
+    animation: fadein 700ms;
   }
 
   .song .title {
