--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     width: 100%;
     align-items: center;
     display: flex;
-    animation: fadein 700ms;
+    animation: fadein 3s;
 }
 
 .song .title {
@@ -88,8 +88,8 @@ body {
     font-weight: bolder;
 }
 
-#sameartists {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+.artist {
+    display: inline-block;
+    width: fit-content;
+    margin: 30px;
 }
