--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     width: 100%;
     align-items: center;
     display: flex;
-    animation: fadein 1s;
+    animation: fadein 1.5s;
 }
 
 .song .title {
@@ -113,9 +113,9 @@ input,button {
     display: inline-block;
     width: fit-content;
     margin: 30px;
-    animation: fadein 1s;
+    animation: fadein 1.5s;
 }
 
 #results {
-    animation: loadin 200ms;
+    animation: loadin 500ms ease-out;
 }
