--- a/style.css
+++ b/style.css
@@ -41,13 +41,13 @@ body {
     color: white;
 }
 
-.song .icon {
+.song,.playlist .icon {
     height: 100%;
     margin-right: 10px;
     aspect-ratio: 1 / 1;
 }
 
-.song {
+.song,.playlist {
     height: 75px;
     width: 100%;
     align-items: center;
@@ -55,7 +55,11 @@ body {
     animation: fadein 1.5s;
 }
 
-.song .title {
+.playlist {
+    width: fit-content;
+}
+
+.song,.playlist .title {
     font-size: 20px;
     font-weight: bold;
 }
