--- a/style.css
+++ b/style.css
@@ -57,6 +57,12 @@ body {
 
 .playlist {
     width: fit-content;
+    display: inline-flex;
+}
+
+#listViewer {
+    margin: auto;
+    width: fit-content;
 }
 
 .song,.playlist .title {
