--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     color: white;
 }
 
-.song,.playlist .icon {
+.song .icon {
     height: 100%;
     margin-right: 10px;
     aspect-ratio: 1 / 1;
@@ -67,10 +67,23 @@ body {
     width: fit-content;
 }
 
-.song,.playlist .title {
+.song .title {
     font-size: 20px;
     font-weight: bold;
 }
+
+.playlist .title {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.playlist .icon {
+    height: 100%;
+    margin-right: 10px;
+    aspect-ratio: 1 / 1;
+}
+
+
 
 @keyframes fadein {
     0% {
