--- a/style.css
+++ b/style.css
@@ -86,7 +86,8 @@ body {
 .playlist.header {
     border-bottom: 1px solid white;
     display: flex;
-    margin-bottom: 10px;
+    margin: 10px;
+    margin-left: 0px;
 }
 
 
@@ -159,7 +160,10 @@ input,button {
 }
 
 .artist.selected {
-    background-color: whitesmoke;
+    background-color: white;
+}
+
+.artist.selected .title {
     color: black;
 }
 
